--- a/templates/panelpage.html
+++ b/templates/panelpage.html
@@ -1,10 +1,19 @@
 ﻿{% extends 'basepage.html' %}
 
 {% block content %}
-<form method="post">
+<form method="post" action="/activity">
     what did you do? <input type="text" name="act_name"><br>
+    Fill any two of the following:<br>
     when did you start? <input type="text" name="act_start_h">:<input type="text" name="act_start_m"><br>
     when did you finish? <input type="text" name="act_finish_h">:<input type="text" name="act_finish_m"><br>
+    how long did it take? <input type="text" name="act_duration">
+    <input type="submit">
+</form>
+<form method="post" action="/commute">
+    where did you start? <input type="text" name="origin"><br>
+    where did you finish? <input type="text" name="destination"><br>
+    when did you start? <input type="text" name="com_start_h">:<input type="text" name="com_start_m"><br>
+    when did you finish? <input type="text" name="com_finish_h">:<input type="text" name="com_finish_m"><br>
     <input type="submit">
 </form>
 {% endblock %}
