done for 13-September-2012

--- a/templates/panelpage.html
+++ b/templates/panelpage.html
@@ -1,13 +1,14 @@
 ﻿{% extends 'basepage.html' %}
 
 {% block content %}
+<h2>What have you done, Comrade {{username}}?</h2>
 <h3>Activity</h3>
 <form method="post" action="/activity">
     what did you do? <input type="text" name="act_name"><br>
     Fill any two of the following:<br>
     when did you start? <input type="text" size=2 maxlength=2 name="act_start_h">:<input type="text" name="act_start_m" size=2 maxlength=2><br>
     when did you finish? <input type="text" size=2 maxlength=2 name="act_finish_h">:<input type="text" name="act_finish_m" size=2 maxlength=2><br>
-    how long did it take? <input type="text" name="act_duration"><br>
+    how long did it take? <input type="text" size=5 name="act_duration"> minutes<br>
     <input type="submit">
 </form>
 <hr>
@@ -15,8 +16,10 @@
 <form method="post" action="/commute">
     where did you start? <input type="text" name="origin"><br>
     where did you finish? <input type="text" name="destination"><br>
+    Fill any two of the following:<br>
     when did you start? <input type="text" name="com_start_h" size=2 maxlength=2>:<input type="text" name="com_start_m" size=2 maxlength=2><br>
     when did you finish? <input type="text" name="com_finish_h" size=2 maxlength=2>:<input type="text" name="com_finish_m" size=2 maxlength=2><br>
+    how long did it take? <input type="text" size=5 name="com_duration"> minutes<br>
     <input type="submit">
 </form>
 {% endblock %}
