done for 14-September-2012

--- a/templates/panelpage.html
+++ b/templates/panelpage.html
@@ -12,6 +12,13 @@
     <input type="submit">
 </form>
 <hr>
+<h3>Event</h3>
+<form method="post" action="/event">
+    what did you do? <input type="text" name="event_name"><br>
+    when was that? <input type="text" maxlength=2 size=2 name="event_when_h">:<input type="text" maxlength=2 size=2 name="event_when_m"><br>
+    <input type="submit">
+</form>
+<hr>
 <h3>Commute</h3>
 <form method="post" action="/commute">
     where did you start? <input type="text" name="origin"><br>
