--- a/templates/panelpage.html
+++ b/templates/panelpage.html
@@ -29,4 +29,13 @@
     how long did it take? <input type="text" size=5 name="com_duration"> minutes<br>
     <input type="submit">
 </form>
+<hr>
+<h3>Expense</h3>
+<form method="post" action="/expense">
+    what did you spend on? <input type="text" name="name"><br>
+    how much did you spend? <input type="text" name="amount"><br>
+    what would you classify it as? <input type="text" name="category"><br>
+    <input type="submit">
+</form>
+<hr>
 {% endblock %}
