commit of 27 September 2012

--- a/templates/panelpage.html
+++ b/templates/panelpage.html
@@ -19,7 +19,7 @@
 </form>
 <hr>
 <h3>Event</h3>
-<form method="post" action="/event">
+<form method="post" action="/posactivity">
     what did you do? <input type="text" name="event_name"><br>
     when was that? <input type="text" maxlength=2 size=2 name="event_when_h">:<input type="text" maxlength=2 size=2 name="event_when_m"><br>
     <input type="submit">
