--- a/templates/panelpage.html
+++ b/templates/panelpage.html
@@ -1,60 +1,74 @@
 ﻿{% extends 'basepage.html' %}
 
 {% block content %}
-<h1 class="Header" id="PanelHeader">What have you done, {{user.salutation}} {{user.name}}?</h1>
+<h1 class="Header" id="PanelHeader">What have you done, {{user.salutation}} {{user.username}}?</h1>
 <div class="Wrapper" id="PanelOverWrapper">
     <div class="PanelWrapper">
         <h2 class="PanelCategory">General Activity</h2>
         <form action="/postactivity" method="/post">
-            ###make prettier
             Name <input type="text" name="activity_name"><br>
-            Day <input type="text" name="activity_day" value="{{datetime.datetime.today().strftime('%d/%m/%y')}}"><br>
+            Day <input type="text" name="activity_day" value="{{datetime.datetime.today().strftime('%d/%m/%Y')}}"><br>
             Time <input type="text" name="activity_time" value="{{datetime.datetime.now().strftime('%H:%M')}}"><br>
             <input type="submit">
         </form>
     </div>
+    
     <div class="PanelWrapper">
         <h2 class="PanelCategory">Energy</h2>
         <form action="/postactivity" method="post">
             <input type="hidden" name="activity_name" value="coffee">
-            <input type="hidden" name="activity_time" value="{{(datetime.datetime.now() + datetime.timedelta(hours = user.timezone)).stftime('%H:%M')}}">
-            <input type="hidden" name="activity_day" value="{{(datetime.datetime.today() + datetime.timedelta(hours = user.timezone)).strftime('%d/%m/%y')}}">
+            <input type="hidden" name="activity_time" value="{{(datetime.datetime.now() + datetime.timedelta(hours = user.timezone)).strftime('%H:%M')}}">
+            <input type="hidden" name="activity_day" value="{{(datetime.datetime.today() + datetime.timedelta(hours = user.timezone)).strftime('%d/%m/%Y')}}">
             <input type="submit" value="I just had coffee!">
         </form>
         <form action="/posttimedactivity" method="post">
             <input type="hidden" name="act_name" value="sleep">
-            Slept at <input type="text" name="act_start_day" value="{{(datetime.datetime.now() + datetime.timedelta(hours = user.timezone - 6.0)).stftime('%d/%m/%y')}}">, 
+            Slept at <input type="text" name="act_start_day" value="{{(datetime.datetime.now() + datetime.timedelta(hours = user.timezone - 6.0)).strftime('%d/%m/%Y')}}">, 
             <input type="text" name="act_start_time"><br>
-            Woke up at <input type="text" name="act_end_day" value="{{(datetime.datetime.now() + datetime.timedelta(hours = user.timezone)).stftime('%d/%m/%y')}}">, 
-            <input type="text" name="act_end_time" value="{{(datetime.datetime.now() + datetime.timedelta(hours = user.timezone)).stftime('%H:%M')}}"><br>
+            Woke up at <input type="text" name="act_end_day" value="{{(datetime.datetime.now() + datetime.timedelta(hours = user.timezone)).strftime('%d/%m/%Y')}}">, 
+            <input type="text" name="act_end_time" value="{{(datetime.datetime.now() + datetime.timedelta(hours = user.timezone)).strftime('%H:%M')}}"><br>
             for <input type="text" name="act_duration"> hours<br>
             <input type="submit">
         </form>
+        <form action="/postmeal" method="post">
+            I had <select name="meal_category">
+                <option value="breakfast">Breakfast</option>
+                <option value="lunch">Lunch</option>
+                <option value="dinner">Dinner</option>
+                <option value="supper">Supper</option>
+                <option value="snack">Snack</option>
+            </select>
+            of <input type="text" name="meal_menu"><br>
+            at <input type="text" name="meal_place"><br>
+            at this time <input type="text" name="meal_day" value="{{(datetime.datetime.now() + datetime.timedelta(hours = user.timezone)).strftime('%d/%m/%Y')}}">
+            <input type="text" name="meal_time" value="{{(datetime.datetime.now() + datetime.timedelta(hours = user.timezone)).strftime('%H:%M')}}"><br>
+        </form>
     </div>
+    
     <div class="PanelWrapper">
         <h2 class="PanelCategory">Hygiene</h2>
         <form action="/postactivity" method="post">
             Shower 
-            <input type="text" name="activity_day" value="{{(datetime.datetime.today() + datetime.timedelta(hours = user.timezone)).strftime('%d/%m/%y')}}"> 
+            <input type="text" name="activity_day" value="{{(datetime.datetime.today() + datetime.timedelta(hours = user.timezone)).strftime('%d/%m/%Y')}}"> 
             <input type="text" name="activity_time" value="{{(datetime.datetime.now() + datetime.timedelta(hours = user.timezone)).strftime('%H:%M')}}">
             <input type="hidden" name="activity_name" value="shower">
         </form><br>
         <form action="/postactivity" method="post">
             <input type="hidden" name="activity_name" value="shower">
-            <input type="hidden" name="activity_time" value="{{(datetime.datetime.now() + datetime.timedelta(hours = user.timezone)).stftime('%H:%M')}}">
-            <input type="hidden" name="activity_day" value="{{(datetime.datetime.today() + datetime.timedelta(hours = user.timezone)).strftime('%d/%m/%y')}}">
+            <input type="hidden" name="activity_time" value="{{(datetime.datetime.now() + datetime.timedelta(hours = user.timezone)).strftime('%H:%M')}}">
+            <input type="hidden" name="activity_day" value="{{(datetime.datetime.today() + datetime.timedelta(hours = user.timezone)).strftime('%d/%m/%Y')}}">
             <input type="submit" value="I just showered!">
         </form>
         <form action="/postactivity" method="post">
             <input type="hidden" name="activity_name" value="shave">
-            <input type="hidden" name="activity_time" value="{{(datetime.datetime.now() + datetime.timedelta(hours = user.timezone)).stftime('%H:%M')}}">
-            <input type="hidden" name="activity_day" value="{{(datetime.datetime.today() + datetime.timedelta(hours = user.timezone)).strftime('%d/%m/%y')}}">
+            <input type="hidden" name="activity_time" value="{{(datetime.datetime.now() + datetime.timedelta(hours = user.timezone)).strftime('%H:%M')}}">
+            <input type="hidden" name="activity_day" value="{{(datetime.datetime.today() + datetime.timedelta(hours = user.timezone)).strftime('%d/%m/%Y')}}">
             <input type="submit" value="I just shaved!">
         </form>
         <form action="/postactivity" method="post">
             <input type="hidden" name="activity_name" value="cut hair">
-            <input type="hidden" name="activity_time" value="{{(datetime.datetime.now() + datetime.timedelta(hours = user.timezone)).stftime('%H:%M')}}">
-            <input type="hidden" name="activity_day" value="{{(datetime.datetime.today() + datetime.timedelta(hours = user.timezone)).strftime('%d/%m/%y')}}">
+            <input type="hidden" name="activity_time" value="{{(datetime.datetime.now() + datetime.timedelta(hours = user.timezone)).strftime('%H:%M')}}">
+            <input type="hidden" name="activity_day" value="{{(datetime.datetime.today() + datetime.timedelta(hours = user.timezone)).strftime('%d/%m/%Y')}}">
             <input type="submit" value="I just got a haircut!">
         </form>
     </div>
